--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# local database
+spring.datasource.url=jdbc:mysql://192.168.50.4:3306/dbname?charset=utf8&parseTime=True&loc=Local
+spring.datasource.username=dbuser
+spring.datasource.password=lBeMpe"4Yz
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.database=mysql
+spring.jpa.properties.database-platform=org.hibernate.dialect.MySQLDialect
