add publisher on api error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,16 @@ spring.datasource.username=dbuser
 spring.datasource.password=lBeMpe"4Yz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+## local kafka
+#spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=localhost:9092
+##spring.kafka.client.dns.lookup=resolve_canonical_bootstrap_servers_only
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#
+## register topic
+#topics.name.event=event_topics
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
