--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 # local database
-spring.datasource.url=jdbc:mysql://192.168.50.4:3306/dbname?charset=utf8&parseTime=True&loc=Local
-spring.datasource.username=dbuser
-spring.datasource.password=lBeMpe"4Yz
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/app_employee?charset=utf8&parseTime=True&loc=Local
+spring.datasource.username=employeeDB
+spring.datasource.password=employee
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=authentication
+spring.redis.jedis.pool.max-active=20
+spring.redis.jedis.pool.max-wait=1000
+spring.redis.jedis.pool.max-idle=5
+spring.redis.jedis.pool.min-idle=0
+
+spring.redis.timeout=10000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
