--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
+spring.devtools.remote.secret=mysecret
 # local database
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/app_employee?charset=utf8&parseTime=True&loc=Local
+spring.datasource.url=jdbc:mysql://db:3306/app_employee?charset=utf8&parseTime=True&loc=Local
 spring.datasource.username=employeeDB
 spring.datasource.password=employee
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.port=6379
 spring.redis.password=authentication
 spring.redis.jedis.pool.max-active=20
