--- a/nginx.conf
+++ b/nginx.conf
@@ -56,7 +56,7 @@ http {
     root        /var/www/example.com/public;
 
     # security headers
-    add_header X-XSS-Protection        "1; mode=block" always;
+    # add_header X-XSS-Protection        "1; mode=block" always;
     add_header X-Content-Type-Options  "nosniff" always;
     add_header Referrer-Policy         "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
@@ -68,12 +68,11 @@ http {
     }
 
     location / {
-        proxy_pass http://172.22.0.1:5173;
-        # try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     location ~ ^/api/v1/reviews {
-        proxy_pass http://172.17.0.1:3005;
+        proxy_pass http://172.18.0.1:3050;
         
         proxy_set_header Host              $host;
         proxy_set_header Upgrade           $http_upgrade;
